# vulkaning

./: .clang-format  .gitignore  CMakeLists.txt
game/: CMakeLists.txt  build_shaders.sh
game/res/shaders/: build_shaders.py
game/src/game/: game.cpp  game.hpp
res/shaders/: build_shaders.py
src/neuron/: app.cpp  app.hpp  command_recorder.cpp  command_recorder.hpp  dynamic_rendering_pass.cpp  dynamic_rendering_pass.hpp  neuron.cpp  neuron.hpp  pipeline.cpp  pipeline.hpp  primary_renderer.cpp  primary_renderer.hpp  render_system.cpp  render_system.hpp  render_target.cpp  render_target.hpp  window.cpp  window.hpp
